--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,10 @@
 
 </head>
 <body>
-    <script defer src="userin.bundle.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
+  <script defer src="/index.bundle.js"></script><link href="/index.styles.css" rel="stylesheet"></head>
+  <script defer src="/userin.bundle.js"></script><link href="/userin.styles.css" rel="stylesheet"></head>
+
+  <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
 
    
   <div class="container h-100">
